--- a/portfolio.html
+++ b/portfolio.html
@@ -61,14 +61,14 @@
                         </div>
                         <div class="tab-contents" id="Experience">
                             <ul>
-                                <li><span>UI?UX</span><br>Designer web/app interfaces</li>
+                                <li><span>Web Developer</span><br>Designer web/app interfaces</li>
                                 <li><span>Web Development</span><br>Desig</li>desinging web/app interfaces</li>
                                 <li><span>App Development</span><br>Learning DSA</li>
                             </ul>
                         </div>
                         <div class="tab-contents" id="Education">
                             <ul>
-                                <li><span>UI?UX</span><br>Designer web/app interfaces</li>
+                                <li><span>Web Developer</span><br>Designer web/app interfaces</li>
                                 <li><span>Web Development</span><br>Desig</li>desinging web/app interfaces</li>
                                 <li><span>App Development</span><br>Learning DSA</li>
                             </ul>
