--- a/portfolio.html
+++ b/portfolio.html
@@ -56,25 +56,25 @@
                         my skills and knowladge
                     </p>
                     <div class="tab-titles">
-                        <div class="tab-links active-link" onclick="opentab('Skills')">Skills</div>
-                        <div class="tab-links" onclick="opentab('Experience')">Experience</div>
-                        <div class="tab-links" onclick="opentab('Education')">Education</div>
+                        <p class="tab-links active-link" onclick="opentab('skills')">Skills</p>
+                        <p class="tab-links" onclick="opentab('experience')">Experience</p>
+                        <p class="tab-links" onclick="opentab('education')">Education</p>
                     </div>
-                    <div class="tab-contents active-tab" id="Skills">
+                    <div class="tab-contents active-tab" id="skills">
                         <ul>
                             <li><span>Front End</span></spanf></span><br>Designer web/app interfaces</li>
                             <li><span>Web Development</span><br>Desig</li>desinging web/app interfaces</li>
                             <li><span>App Development</span><br>Learning DSA</li>
                         </ul>
                     </div>
-                    <div class="tab-contents" id="Experience">
+                    <div class="tab-contents" id="experience">
                         <ul>
                             <li><span>Web Developer</span><br>Designer web/app interfaces</li>
                             <li><span>Web Development</span><br>Desig</li>desinging web/app interfaces</li>
                             <li><span>App Development</span><br>Learning DSA</li>
                         </ul>
                     </div>
-                    <div class="tab-contents" id="Education">
+                    <div class="tab-contents" id="education">
                         <ul>
                             <li><span>Web Developer</span><br>Designer web/app interfaces</li>
                             <li><span>Web Development</span><br>Desig</li>desinging web/app interfaces</li>
@@ -108,10 +108,6 @@
 
     </script>
 </body>
-<footer>
-    <div id="footer">
-        
-    </div>
-</footer>
+
 
 </html>
